--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.13",
     "@astrojs/check": "^0.9.4",
+    "@astrojs/preact": "^3.5.4",
+    "astro": "^4.16.13",
+    "preact": "^10.25.0",
     "typescript": "^5.6.3"
   }
 }
