--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "lint": "eslint .",
+    "prettier": "prettier --check .",
+    "build": "npm run lint && npm run prettier && astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -15,5 +17,13 @@
     "astro": "^4.16.13",
     "preact": "^10.25.0",
     "typescript": "^5.6.3"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.17.0",
+    "@typescript-eslint/parser": "^8.19.0",
+    "eslint": "^9.17.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "globals": "^15.14.0",
+    "typescript-eslint": "^8.19.0"
   }
 }
