--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -3,9 +3,8 @@ name: Code Quality
 on:
   push:
     branches:
-      - '*'
+      - "*"
   pull_request:
-
 
 jobs:
   test-and-build:
@@ -17,7 +16,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: "18"
 
       - name: Install dependencies
         run: npm install
